2003-01-29  Ryan T. Sammartino  <ryants@shaw.ca>

	* common/docman/DocumentFactory.class: fix syntax error.

2003-01-28 Reinhard Spisser <reinhard@spisser.it>

	* www/register/projectinfo.php, www/include/languages/Base.tab,
	www/include/languages/Italian.tab:
	Localization

2003-01-28 Tom Copeland <tom@infoether.com>

	* www/soap/*: Added new operations to support authentication and
	adding/updated bugs

	* common/tracker/ArtifactTypeFactory.class: Added some new DAOish
	functions.

2003-01-26  Ryan T. Sammartino  <ryants@shaw.ca>

	* common/include/utils.php(util_send_message): remove duplicated
	code.
	(util_handle_message): do not send messages to "Nobody".

2003-01-25  Ryan T. Sammartino  <ryants@shaw.ca>

	* cronjobs/mail/mailing_lists_create.php: lowercase all list names,
	do not call "add_alias.php".

	* www/snippet/browse.php: remove extra line feed at top of file,
	fix bug #185.

2003-01-25  Reinhard Spisser   <reinhard@spisser.it>

	* www/pm/reporting/index.php,
	www/include/tool_reports.php, www/pm/admin/index.php,
	common/pm/*, www/include/html.php, www/include/Layout.class,
	www/include/html.php, www/source.php
	Localization

2003-01-24  Reinhard Spisser   <reinhard@spisser.it>

	* www/404.php, www/sendmessage.php, www/users,
	www/include/user_home,php, www/include/exit.php,
	common/docman/Document.class,
	common/docman/DocumentGroup.class,
	common/frs/FRSFile.class, common/frs/FRSRelease.class
	common/frs/FRSPackage.class,
	www/project/filemodule_monitor.php, www/project/memberlist.php
	Localization

	* www/pm/index.php, www/pm/browse_task.php, www/pm/add_task.php,
	www/pm/mod_task.php, www/include/ProjectGroupHTML.class,
	www/pm/include/ProjectTaskHTML.class, www/pm/task.php,
	www/pm/ganttpage.php:
	Localization


	* www/project/showfiles.php: removed unused code, Localization

	* common/include/Error.class: new setMissingParamsError()


2003-01-24  Michael Jennings  <mej@eterm.org>

	* gforge.spec:  New spec file for GForge.  This is, of course,